[package]
name = "cloudflare-dns-updater_rs"
version = "0.2.0"
authors = ["jhson <zzongaone@gmail.com>"]
edition = "2024"
description = "A cloudflare dns updater script written in rust"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/jonghee-son/cloudflare-dns-updater_rs"
repository = "https://github.com/jonghee-son/cloudflare-dns-updater_rs"
keywords = ["cli", "dns"]
categories = ["commend-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# If compiling on a system without OpenSSL installed, or cross-compiling for a different
# architecture, enable this feature to compile OpenSSL as part of the build.
# See https://docs.rs/openssl/#vendored for more.
static_ssl = ['openssl/vendored']

[dependencies]
anyhow = "1.0"
curl = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
[dependencies.openssl]
optional = true
version = "0.10"
